# dec25_intern_B_security

./: .cursorrules  .gitignore  README.md  example.env  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: main.yml
agent-backend/: .env.example  database.py  main.py  models.py  pyproject.toml  worker.py
apps/api/: main.py
apps/api/routers/: emails.py  stats.py
apps/api/services/: gmail.py  risk.py
apps/web/: middleware.ts  package.json  pnpm-lock.yaml
apps/web/app/api/luffy/: route.ts
apps/web/app/sign-in/: page.tsx
apps/web/components/: dashboard-layout.tsx  emails-page.tsx
apps/web/components/landing/: landing-page.tsx
apps/web/styles/: landing.css
apps/worker/analyses/: main.py
apps/worker/decision/: main.py  requirements.txt
apps/worker/ingest/: main.py  requirements.txt
apps/worker/intent/: main.py  schemas.py
dashboard/: .env.example  auth.ts
dashboard-backend/: database.py  gmail_service.py  main.py  migrate.py  models.py  pyproject.toml  seed_db.py
dashboard-backend/tests/: conftest.py  test_auth.py  test_database.py  test_emails.py  test_health.py  test_main.py  test_organizations.py  test_users.py
dashboard/.clerk/.tmp/: keyless.json
dashboard/components/: dashboard-layout.tsx  emails-page.tsx
dashboard/components/ui/: avatar.tsx
dashboard/lib/: api.ts
decision-agent/: main.py
email-ingest-agent/: main.py
